--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 
+# dataSource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/whyNot_db?serverTimezone=UTC
+spring.datasource.username=ssafy
+spring.datasource.password=ssafy
+#spring.datasource.type=org.apache.commons.dbcp2.BasicDataSource
+
+#myBatis
+mybatis.mapper-locations=mappers/*.xml
+mybatis.type-aliases-package=com.ssafy.model.dto
