[feat] 로그인 토큰 발급 및 회원가입 기능 구현

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,13 @@
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
 		
+		<!-- JWT 사용하기 위해서 -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
