[feat] 회원가입 시 이미지 첨부 기능 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.password=ssafy
 #myBatis
 mybatis.mapper-locations=mappers/*.xml
 mybatis.type-aliases-package=com.whyNot.model.dto
+
+upload.path=C:/Users/SSAFY/Desktop/whyNot_Front/public
+
